# advent-of-code

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
source/day_1/: part_1.cpp  part_2.cpp
source/day_2/: part_1.cpp  part_2.cpp
