[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="day1_part1"
path="src/bin/day1/day1_part1.rs"

[[bin]]
name="day1_part2"
path="src/bin/day1/day1_part2.rs"